# EventManager

./: env_example  save.txt
api/: Dockerfile  Dockerfile.prod  pyproject.toml
api/app/: annotations.py  config.py  databases.py  main.py  save.txt
api/app/src/: routers.py
api/app/src/auth/: controllers.py  routes.py  utils.py
api/app/src/events/: controllers.py  routes.py  schemas.py
api/app/src/users/: controllers.py  routes.py  schemas.py
api/app/src/websockets/: routes.py  utils.py
docker/: docker-compose-prod.yml  docker-compose.yml
frontend/: Dockerfile  docker-compose.yml  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  Home.jsx  index.css  main.jsx  utils.jsx  variables.jsx
frontend/src/components/: EventList.jsx  Navbar.jsx
frontend/src/components/calendar/: CalendarView.jsx
frontend/src/components/dashboard/: Dashboard.jsx
frontend/src/components/drawers/: UserDrawer.jsx
frontend/src/components/events/: EventCard.jsx  EventDetail.jsx  EventList.jsx
frontend/src/components/features/: EventCard.jsx  EventDetail.jsx  EventDetailChatRoom.jsx  UserDetail.jsx  UserDrawer.jsx
frontend/src/components/modals/: CreateEvent.jsx  EditEvent.jsx  LogIn.jsx  SignUp.jsx
frontend/src/components/websocket/: Websocket.jsx
frontend/src/pages/: EventDetailPage.jsx  EventsPage.jsx  UserDetailPage.jsx
