[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["marek.tremel <tremelmarek@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.0"}
pydantic = "^2.9.2"
redis = "^5.1.1"
pymongo = "^4.10.1"
pydantic-settings = "^2.5.2"
websockets = "^13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
