[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["marek.tremel <tremelmarek@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.0"}
pydantic = "^2.9.2"
redis = "^5.1.1"
pymongo = "^4.10.1"
pydantic-settings = "^2.5.2"
websockets = "^13.1"
pyjwt = "^2.10.0"
loguru = "^0.7.2"
bcrypt = "^4.2.1"
python-multipart = "^0.0.17"
ruff = "^0.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "A",  # prevent using keywords that clobber python builtins
    "B",  # bugbear: security warnings
    "E",  # pycodestyle
    "F",  # pyflakes
    "ISC",  # implicit string concatenation
    "UP",  # alert you when better syntax is available in your python version
    "N",   # pep8-naming
    "PTH",  # use pathlib
]
preview = true

[tool.ruff.lint.pydocstyle]
convention = "google"